Added track of grid, vertical walls and horizontal walls

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 		></script>
 		<title>Maze Game</title>
 	</head>
-	<body></body>
+	<body>
+		<script src="index.js"></script>
+	</body>
 </html>
