Walls falling when user reachs the goal satte

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		<title>Maze Game</title>
 	</head>
 	<body>
-		<script src="index.js"></script>
+		<script src="index.js"></scrip>
 	</body>
 </html>
