Made canvas fit whole screen

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 			crossorigin="anonymous"
 		></script>
 		<title>Maze Game</title>
+		<style>
+			body {
+				margin: 0px; /* Setting to maze could take whole space */
+			}
+		</style>
 	</head>
 	<body>
-		<script src="index.js"></scrip>
+		<script src="index.js"></script>
 	</body>
 </html>
