--- a/index.html
+++ b/index.html
@@ -8,14 +8,38 @@
 			integrity="sha512-pi0tSRZdlNRZeANPwdAIHRAYg6gZZV6QlAiyHXn5TYqLzBKE9jlttO/QgYLMhISD6oNv2kPsVelx+n5nw0FqKA=="
 			crossorigin="anonymous"
 		></script>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css"
+		/>
 		<title>Maze Game</title>
 		<style>
 			body {
 				margin: 0px; /* Setting to maze could take whole space */
 			}
+			.hidden {
+				display: none !important;
+			}
+			.winner {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				z-index: 1;
+				width: 100vw; /* These two makes it on center great */
+				height: 100vh;
+				background-color: transparent;
+			}
 		</style>
 	</head>
 	<body>
+		<div class="winner hidden">
+			<div class="notification is-success is-light">
+				<button class="delete"></button>
+				<h1 class="title">Congratulations!</h1>
+				<h2 class="subtitle">You've won the game, great play.</h2>
+				Please refresh the page to load another maze and Enjoy.
+			</div>
+		</div>
 		<script src="index.js"></script>
 	</body>
 </html>
